26-03-2014 : Adihu - Alignments Fixed
git-svn-id: https://10.24.239.14:5511/svn/Engage@239 f308e16d-57e9-4fa7-a310-9aba3baf408f

--- a/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-business-skin.css
+++ b/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-business-skin.css
@@ -578,7 +578,7 @@ font-style:normal;
 .af_separator
 {
     width:962px;
-    height:0.5px;
+    height:1px;
     background-color:#C3C3C3 !important;
     margin-left: -15px!important;
     margin-top: 3px;
@@ -611,7 +611,7 @@ text-decoration:none !important;
 /*text-shadow:0px 1px 0px rgba(231, 231, 231, 1 ) !important;*/
 font-style:normal !important;
 text-decoration:none !important;
-padding-top: 1px !important;
+padding-top: 0px !important;
 padding-bottom: 2px !important;
 background: #3cb6ce !important; /* Old browsers */
 background: -moz-linear-gradient(top,  #3cb6ce 0%, #40c4d6 51%, #3aafc4 100%) !important; /* FF3.6+ */
