--- a/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-private-skin.css
+++ b/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-private-skin.css
@@ -718,7 +718,7 @@ font-style:normal;
 .af_separator
 {
     width:962px;
-    height:0.5px !important;
+    height:1px !important;
     background-color:#C3C3C3 !important;
     margin-left: -15px!important;
     margin-top: 3px;
@@ -751,7 +751,7 @@ text-decoration:none !important;
 /*text-shadow:0px 1px 0px rgba(231, 231, 231, 1 ) !important;*/
 font-style:normal !important;
 text-decoration:none !important;
-padding-top: 1px !important;
+padding-top: 0px !important;
 padding-bottom: 2px !important;
 
 background: #f2ad00 !important; /* Old browsers */
